test/types/enum/scope-param-offset-non-int-2.chpl

param x = false;
proc enumScopeTest() {
  enum Numbers {one=x, two, three};
  writeln(Numbers.one);
}

enumScopeTest();
